PluggableAuthService changelog

  PluggableAuthService 1.5 (unreleased)

    Features Added

      - Implemented authentication caching in _extractUserIds.

      - Ported standard user folder tests from the AccessControl test suite.

    Bugs Fixed

      - Fixed test breakage induced by use of Z3 pagetemplates in Zope
        2.10+.

      - BasePlugin: The listInterfaces method only considered the old-style
        __implements__ machinery when determining interfaces provided by
        a plugin instance.

      - ZODBUserManager: Already encrypted passwords were encrypted again in
        addUser and updateUserPassword.
        (http://www.zope.org/Collectors/Zope/1926)

      - Made sure the emergency user via HTTP basic auth always wins, no matter
        how borken the plugin landscape.

    Other

      - Removed some BBB code for Zope versions < 2.8, which is not needed 
        since we require Zope > 2.8.5 nowadays.

  PluggableAuthService 1.4 (2006/08/28)

    Bugs Fixed

      - Extended the DomainAuthHelper to function as its own extraction
        plugin, to allow for the case that another extractor is registered,
        but does not return any credentials.
        (http://www.zope.org/Collectors/PAS/46)

      - Re-worded parts of the README so they don't point to specific or 
        non-existing files (http://www.zope.org/Collectors/PAS/6 and
        http://www.zope.org/Collectors/PAS/47)

  PluggableAuthService 1.4-beta (2006/08/07)

    Features Added

      - Created a "Configured PAS" entry in the ZMI add list, which
        allows creating a PAS using base and extension GenericSetup profiles
        registered for IPluggableAuthService.  This entry should eventually
        replace the "stock" PAS entry (assuming that we make GenericSetup
        a "hard" dependency).

      - Added an "empty" GenericSetup profile, which creates a PAS containing
        only a plugin registry and a setup tool.

    Bugs Fixed
